Fixed bugs mentioned earlier
Removed the focus effect from btn. Delayed the endquiz() by 0.5 seconds so that if time runs out after a 15s penalty, there is enough time for alertWrong() to act.

Found a new bug related to storage and fixed.

Changed some declaration for code readability.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <!-- navigate to forth section: highest score  -->
       <a class="float-left ml-3" href="#" id="view-scores">View Highscores</a>
       <!-- display times left  -->
-      <div class="float-right mr-3" id="timer">
-        Time: <span id="time-left"></span>s
+      <div class="float-right mr-3" id="timer-container">
+        Time: <span id="time-left"></span>
       </div>
     </header>
 
